--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <audio id="mi-audio" src="flores.mp3" autoplay loop></audio>
+       <<audio id="mi-audio" src="flores.mp3" autoplay loop muted></audio>
     
     
     <svg id="svg" width="800" height="600"></svg>
@@ -24,10 +24,11 @@
 
     <script>
         // Asegúrate de que el audio se intente reproducir al cargar
-        const audio = document.getElementById('mi-audio');
-        audio.play().catch(error => {
-            console.log('Error al intentar reproducir el audio:', error);
-        });
+document.body.addEventListener('click', () => {
+    const audio = document.getElementById('mi-audio');
+    audio.muted = false;
+    audio.play();
+});
     </script>
 </body>
 </html>
