--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-       <<audio id="mi-audio" src="flores.mp3" autoplay loop muted></audio>
+       <audio id="mi-audio" src="flores.mp3" autoplay loop muted></audio>
     
     
     <svg id="svg" width="800" height="600"></svg>
