--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles2.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
-    <title>TUS FLORES</title>
+    <title>Document</title>
 </head>
 <body>
     <audio id="mi-audio" src="flores.mp3" autoplay loop muted></audio>
@@ -15,7 +15,7 @@
     <svg id="svg" width="800" height="600"></svg>
 
     <header>
-        <h1>Tus flores amarillas <3 Paola </h1>
+        <h1>Tus flores amarillas <3</h1>
 
     </header>
     <footer>
