--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <svg id="svg" width="800" height="600"></svg>
 
     <header>
-        <h1>Tus flores amarillas <3</h1>
+        <h1>Tus flores amarillas <3 mi Paola</h1>
 
     </header>
     <footer>
