--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles2.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
-    <title>Document</title>
+    <title>Flores amarillas</title>
 </head>
 <body>
     <audio id="mi-audio" src="flores.mp3" autoplay loop muted></audio>
